syntax = "proto3";

package greeter;

option go_package = "github.com/mrityunjoydey/go-grpc/rpc";

// The greeter service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  // Server streaming
  rpc StreamGreetings (HelloRequest) returns (stream HelloReply);
  // Client streaming
  rpc GreetManyTimes (stream HelloRequest) returns (HelloReply);
  // Bi-directional
  rpc Chat (stream HelloRequest) returns (stream HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
